<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/announce_add_activity_bill"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:src="@drawable/d_guzhang"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_titlestring"/>
        <TextView
            android:id="@+id/announce_detialed_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="中华人民共和国"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_sponsorstring"/>
        <TextView
            android:id="@+id/announce_detialed_activity_sponsor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="中华人民共和国"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_datestring"/>
        <TextView
            android:id="@+id/announce_detialed_activity_date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="2019-10-31"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="----"/>
        <TextView
            android:id="@+id/announce_detialed_activity_date_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="2019-11-31"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_timestring"/>
        <TextView
            android:id="@+id/announce_detialed_activity_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="08:10"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="----"/>
        <TextView
            android:id="@+id/announce_detialed_activity_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="05:30"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_addrstring"/>
        <TextView
            android:id="@+id/announce_detialed_activity_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="中国，上海市徐汇区漕宝路3290号龙旗1号楼"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_telephonestring"/>
        <TextView
            android:id="@+id/announce_detialed_activity_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="中华人民共和国"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_chargestring"/>
        <TextView
            android:id="@+id/announce_detialed_activity_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18855033052"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_notestring"/>
        <TextView
            android:id="@+id/announce_detialed_activity_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="中华人民共和国"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/announce_detialed_activity_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/announce_save_buttonstring"/>
        <Button
            android:id="@+id/announce_detialed_activity_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/announce_signup_buttonstring"/>
    </LinearLayout>
</LinearLayout>
