<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/phone_login_image"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/d_haha" />
        <TextView
            android:id="@+id/phone_login_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_login_image"
            android:layout_centerInParent="true"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="17621372791"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:id="@+id/phone_login_ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                android:id="@+id/phone_loging_textver"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/ver"
                android:textColor="@color/black"
                android:textSize="18dp"/>

            <EditText
                android:id="@+id/phone_verification"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="35dp"
                android:background="@null"
                android:hint="@string/inputver"
                android:maxLength="10"
                android:textColor="@color/gray" />
            <Button
                android:id="@+id/phone_getver"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape_button"
                android:text="@string/getver"
                android:textSize="16sp"/>
        </LinearLayout>
        <View
            android:id="@+id/phone_login_line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_alignBottom="@+id/phone_login_ver"
            android:background="@color/green"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_login_line"
            android:layout_margin="8dp"
            android:textColor="@color/royalblue"
            android:text="@string/login_style"/>
    </RelativeLayout>


    <Button
        android:id="@+id/phone_nextstep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/green"
        android:text="@string/login" />

</LinearLayout>
