<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telphone"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/forget_phonenumber"
            android:layout_width="wrap_content"
            android:ems="11"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        >

        <com.example.yang.Activity.VerifyCodeView
            android:id="@+id/forget_verification"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/forget_getver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginEnd="10dp"
            android:background="@color/green"
            android:text="@string/getver"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/forget_nextstep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/nextstep"/>

</LinearLayout>
