<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--手机号-->
    <LinearLayout
        android:id="@+id/loging_phone_number_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:visibility="visible"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/login_phone_input_lin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/login_phone_number_area"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/login_phone_conutry_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10sp"
                    android:gravity="center_vertical"
                    android:text="+86"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_keyboard_arrow_down_black_24dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/login_administrator"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="12"
                android:hint="@string/phoneoremil"
                android:background="@null"
                android:inputType="text" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:gravity="center"
                android:layout_alignStart="@+id/login_phone_input_lin"
                android:layout_alignEnd="@+id/login_phone_input_lin"
                android:layout_alignParentBottom="true"
                android:background="@color/gray"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:gravity="center_vertical"
                android:text="@string/tipspaswwd"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/login_passwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="12"
                android:inputType="textPassword" />
        </LinearLayout>

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:visibility="gone">
           <TextView
               android:id="@+id/login_bymessage"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="40dp"
               android:layout_alignParentRight="true"
               android:gravity="center"
               android:text="@string/login_style"
               android:textColor="@color/blue" />
       </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center">
            <Button
                android:id="@+id/login_main_login"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:text="@string/sure"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <!--验证码-->
    <LinearLayout
        android:id="@+id/login_ver_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:textSize="@dimen/font_18"
            android:text="验证码"/>

        <com.example.yang.Activity.VerifyCodeView
            android:id="@+id/loging_verifycodeview_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>

        <TextView
            android:id="@+id/loging_ver_send_phone_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="验证码已发送到17621372791" />

        <Button
            android:id="@+id/login_ver_state_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="重新发送"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_forget_passwd_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:gravity="end"
            android:textColor="@color/blue"
            android:text="@string/forget_passwd"
            android:textSize="20sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/separator"
            android:textColor="@color/green" />
        <View
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login_register_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:gravity="start"
            android:textColor="@color/blue"
            android:text="@string/register"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
